--- a/home/assets/css/style.css
+++ b/home/assets/css/style.css
@@ -153,3 +153,12 @@ font-weight: 600;
 .login-register p a:hover{
     text-decoration: underline;
 }
+.error-message{
+    padding:12px;
+    background: #f8d7da;
+    border-radius: 6px;
+    font-size: 16px;
+    color:red;
+    text-align: center;
+    margin-bottom: 20px;
+}
