--- a/home/assets/css/bookDetail.css
+++ b/home/assets/css/bookDetail.css
@@ -90,7 +90,7 @@
     margin-bottom: 8px;
   }
   .buy-now {
-    background: var(--primary-color);
+    background: #d70018;
     color: #fff;
   }
   
